# scflux_spatial

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  README.md  pyproject.toml  pytest.ini
.github/: pull_request_template.md
.github/DISCUSSION_TEMPLATE/: community.md  general.md  scientific.md  technical.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
examples/: example_cli_usage.py  example_gem_usage.py  example_spatial_usage.py  example_usage.py  example_visualization_usage.py  run_tests.py
notebooks/: 02_flux_validation.ipynb  03_spatial_coupling_demo.ipynb
scflux_spatial/: LICENSE  __init__.py  setup_project.sh
scflux_spatial/app/: __init__.py  streamlit_app.py
scflux_spatial/cli/: __init__.py  run_flux.py  run_spatial.py
scflux_spatial/config/: defaults.yaml
scflux_spatial/dataio/: __init__.py  sc_mapping.py  visium_loader.py
scflux_spatial/fba/: __init__.py  core.py  integrate_expression.py  objectives.py
scflux_spatial/gem/: __init__.py  gpr.py  human_gem.py
scflux_spatial/notebooks/: 02_flux_validation.ipynb  03_spatial_coupling_demo.ipynb
scflux_spatial/spatial/: __init__.py  coupling.py  kinetics.py  rd.py  units.py
scflux_spatial/viz/: __init__.py  escher_view.py  maps.py
tests/: README.md  __init__.py  conftest.py  test_coupling_dummy.py  test_fba.py  test_gem_improvements.py  test_gpr.py  test_integration.py  test_performance.py  test_rd.py  test_rd_diffusion.py  test_units.py  test_validation.py  test_visium_loader.py
(+7 files in other folders)
